--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "@types/webmidi": "^2.0.4"
   }
 }
