--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/dom-mediacapture-record": "^1.0.6",
     "@types/webmidi": "^2.0.4"
   },
   "browserslist": [
